# opencl_wrapper

./: .gitmodules  CMakeLists.txt  README.md
src/: OpenCLWrapperLog.cpp  OpenCLWrapperLog.hpp
